--- a/src/sass/_grid.scss
+++ b/src/sass/_grid.scss
@@ -21,7 +21,7 @@
 .withGutters,ul.withGutters:first-child{ // specificity booster
 	margin-left:-#{$gutter};
 	margin-top:#{$gutterFixed/3};
-	@media (min-width:$B) { margin-top:-#{$gutterFixed}; }
+	@media (min-width:$B) { margin-left:-#{$gutterFixed};margin-top:-#{$gutterFixed}; }
 	.unit{
 		padding:$gutterFixed/3 0 0 $gutter;
 		@media (min-width:$B) {
